[package]
name = "tokio-imap"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Tokio-based IMAP protocol (client, for now) implementation"
documentation = "https://docs.rs/tokio-imap"
keywords = ["imap", "tokio"]
categories = ["email"]
homepage = "https://github.com/djc/tokio-imap"
repository = "https://github.com/djc/tokio-imap"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
bytes = "0.4"
futures = "0.1"
native-tls = "0.1"
nom = "3.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"
