[package]
name = "imap-proto"
version = "0.16.6"
edition = "2021"
rust-version = "1.61"
description = "IMAP protocol parser and data structures"
documentation = "https://docs.rs/imap-proto"
keywords = ["imap", "email"]
categories = ["email", "network-programming", "parser-implementations"]
homepage = "https://github.com/djc/tokio-imap"
repository = "https://github.com/djc/tokio-imap"
license = "MIT/Apache-2.0"
readme = "../README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
nom = "7"

[dev-dependencies]
assert_matches = "1.3"
