[package]
name = "tokio-imap"
version = "0.5.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Tokio-based IMAP protocol (client, for now) implementation"
documentation = "https://docs.rs/tokio-imap"
keywords = ["imap", "tokio"]
categories = ["email"]
homepage = "https://github.com/djc/tokio-imap"
repository = "https://github.com/djc/tokio-imap"
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bytes = "1"
futures-util = "0.3.8"
futures-sink = "0.3.8"
imap-proto = { version = "0.15", path = "../imap-proto" }
nom = "7"
pin-project = "1"
tokio = { version = "1", features = ["net"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.6.0", features = ["codec"] }
webpki-roots = "0.21.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
