[package]
name = "tokio-imap"
version = "0.5.0"
edition = "2021"
rust-version = "1.71"
description = "Tokio-based IMAP protocol (client, for now) implementation"
documentation = "https://docs.rs/tokio-imap"
keywords = ["imap", "tokio"]
categories = ["email"]
homepage = "https://github.com/djc/tokio-imap"
repository = "https://github.com/djc/tokio-imap"
license = "MIT/Apache-2.0"
readme = "../README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bytes = "1"
futures-util = { version = "0.3.8", default-features = false }
futures-sink = "0.3.8"
imap-proto = { version = "0.16", path = "../imap-proto" }
nom = "7"
pin-project-lite = "0.2.11"
rustls-pki-types = "1"
tokio = { version = "1", features = ["net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
webpki-roots = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
